k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: api
spec:
 replicas: 3
 selector:
   matchLabels:
     app: api
 template:
   metadata:
     labels:
       app: api
   spec:
     containers:
       - name: api
         image: wyklad-docker-api:latest
         imagePullPolicy: Never
         ports:
           - containerPort: 7860
