k8s/redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:6
      ports:
        - containerPort: 6379
