k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: wyklad-docker-worker:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: worker-data
              mountPath: /data
    volumes:
      - name: worker-data
        persistentVolumeClaim:
          claimName: worker-data-pvc
